<resources>
    <string name="app_name">RickandMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="character_name">Name</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="episodenumber">Episode Number</string>
    <string name="episode_name">Name</string>
    <string name="air_date">Air_date</string>
    <string name="location_name">Name</string>
    <string name="type">Type</string>
    <string name="dimension">Dimension</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>