<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationDetailsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/episode_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/dimension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dimension"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_type"/>


    <TextView
        android:id="@+id/residents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Residents"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/container_persons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>